fixed permission to google

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 						<!-- SLIDE  -->
 						<li data-index="rs-149" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="https://photos-2.dropbox.com/t/2/AACJs5CcCNH1uKIXBXyg9WI3ybm8V2IQPJr5Zl1XCl9V0g/12/116105193/jpeg/32x32/1/_/1/2/alicecompressed.jpg/EOPyzFkYkJQBIAIoAg/7lMlm0D9vJaicNm8m-XsHk4tbpL6kENaj61xaPVb9io?size=1280x960&size_mode=3"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="https://lh3.googleusercontent.com/DtBdPFxF6xzweHE_N-ZZHjaDPgsHdjtqn_aUOpvl9XaVqSHQsynmjIgQ3IUpHkLbM7JQtXfI4Dod-fsoBCb49RqjCIgfpJPrH0c6KfqaCS9xyXG8KXUg0H6IwzdXCMaCpVaDuE4Fu-P7MQ95qm148AxCxoRTF0BV0WGwl3mw4HRhWFB-N2J-BbBAH6bEWg-jQlnlsSyWcngJTjmKzexQVgSPeDUHDaZQ9punIVi5w0M5uTbrEu98uTRkkEcviXcd_ocVT59AMwvVpb3z5sec-Qm7SDOYrZoN_LLW_m2vEZc9QOiiX_M4ot8A6kxn0VhAOwCo_CWR_ZjqPS41dAj7VRdicHy7Jz_TAHjhibWXAdY5kPzc2nHTKk3emB8icfnOIpFV9F5WrBWb61Go5pGblPInnX3sP-6yEdkBwk5lV4QrjtD593lqYsmxLCg9jv04pr5WPLRu90CbhCfIzWGE5FvAJDoYzNMUfKOa4pYlXRAC-wOEt9jqS3kHbHOnZiYBeIYEFr3p4mFkFys9u_qrnckpOQmvTQJovDzhP-1iIYIhEeJUCV1W_yun-ploFtMk3UVNG6AvX_OMduMUTVctJuvx15EnKcG2c2ZA6XLwI5uhjhNy=w1911-h1274-no"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -314,7 +314,7 @@
 						<!-- SLIDE  -->
 						<li data-index="rs-150" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="https://photos-3.dropbox.com/t/2/AABzDPDbdaQxHTFh6y_haG3KrKcmGHkDQhqffFB--Zwg2g/12/116105193/jpeg/32x32/1/_/1/2/sisterscompressed.jpg/EOPyzFkYkZQBIAIoAg/tZHuTu1HpENdM58OMxjMwgh9Z1sSkwRvw4PFj3B9DXY?size=1280x960&size_mode=3"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="https://lh3.googleusercontent.com/cth0guTsTfr8nWg4FcbcmMs4fzs6TFdeV0lnUEw-nyDWqH7T9vT06ZkY0GBq3xNdP8_MOBZzw8lqo6vx_V02HEvK5oSwVKShE5oRBT4fxTjI4XfPH1IkBlONEXPdI6F-tQKd3yzdkkhOQGQu447j2mMn7Um6RdFVoXUAouzF_9vmm9WgZKFkmoA4WeVlQwTZedL15kYjL4SF_EeR5jLq4z-kal5iUClPLZbzcpCHWodto98xLVmqVHusD1wA7nO0Nu-zy5BGMXTOdlOcJD6dIgun1J84F_OcnT_Vmv4f2X9vecUiEEIHmbpg27GsDhnrLKX0Gya1Rh-zVAud5PohzFmtcNe0gJNuEwA2JCo7z9Impct5dYMjNOLxk_OmdFQcS2_7ssiAxthS8KFlgqacXulWeHtkZh3jprdyYbsyjAbclmx6pDkn24k2CebCGDbkhMi-JZfjtVBXWE1hG2KxC2jQg3_gEuFWUWTQNQgYYMDOl6ava2hOqQaw0XB-fIwG5UaB5AQE78ZHfjm9ljcZ_5H5qLX0qE-Jq3suXF6y5OzWmccc4MCEav1vjZXG--QZ0v-yUYN2DVSluPeco6PDa-YbZmjZ6fp-TvALQxfZteE7a3dZ=w1911-h1274-no"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -370,7 +370,7 @@
 						<!-- SLIDE  -->
 						<li data-index="rs-151" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="https://photos-5.dropbox.com/t/2/AAC0fGlazY2HwN_8rMu-BMSnxXHKqXTzwkSUBGtpK7GdnQ/12/116105193/jpeg/256x256/1/_/1/2/IMG_0728.jpg/EOPyzFkYjpQBIAIoAg/PE5j-RdA2UVwAIOn8uguFpgFERhgYgrdhODYlJu9F2U?size_mode=3&size=2048x1536"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="https://lh3.googleusercontent.com/PJJyYRlcvRFzsaaziEzIhrJ7SkI_Ddu0RdAbS7cs0XNFTKM-9XMRGiaVh65MjkSvmUX7Iqqmw6PqnFY-HbpPVwSBAilrAWdWkSu0HPJLQZpCn_z083dRZoxC4AW3jy-16tUGSM-iRYnu4hhLw5Yzpb7yDMwp00-hQT3bClkad3fPk_xtl0_cjVXODAAg-JEQro1tFkYsbUQLIdP4hH-72Qq_0_7cn2EwkHzYgHlODx14tm4jwVqkX5YekeJl8uWVH5EciHDgy3g4rJCo2tHF98oyrMNtLtkwQkhA35LOp7iUE8EfbJFENmLtCIpXGbTJKXGSFRomIJOAkqpO_dtVZ0qeeypB_1HQa77tIYqRkNPsvlFwnqQken4MjRvueGa8aQkFVqFQuDjWp-ivyyKzJk8SeXbLI0qCBgYescGCguNpgwMa6Vixn4wzR9dOKkacududVV9jJ0PAxhjig4arkVkcGYRyJXA40EAZ3F7eSnDiXdyWWok3c5a_uPG8Uis4OeIf89gXtUCehC8EGSt-pqGxYZlLEzYEQpYX4lkBDyj5B2Oi8k-_AqOSfplI8LOfLJGR3uwBcLVO-6f0P3TUrUbMjuS2pPefacUbynp5WnvUMUQX=w1433-h929-no"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
@@ -396,7 +396,7 @@
 
 								data-elementdelay="0.05" 
 								
-								style="z-index: 5; white-space: nowrap;">Camping
+								style="z-index: 5; white-space: nowrap;">Zack Lee
 							</div>
 
 							<!-- LAYER NR. 2 -->
@@ -426,7 +426,7 @@
 						<!-- SLIDE  -->
 						<li data-index="rs-152" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
 							<!-- MAIN IMAGE -->
-							<img src="https://photos-5.dropbox.com/t/2/AAABRKVkYO--DeQoXeQtCI3i5ZvwSj7pYkiPit19Esl1KQ/12/116105193/jpeg/256x256/1/_/1/2/IMG_1039.jpg/EOPyzFkYjpQBIAIoAg/Aa4Jj-IymG5YuFs4jwaFsF2CNlxcqWbPKXdBpP_gwM8?size_mode=3&size=2048x1536"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+							<img src="https://lh3.googleusercontent.com/oz1uXkO-oBAp5xjvn4o3DfginTeO6F45HR-x27fzQ2K6OKNUs1yZv7VX-Z3FTTvp4HRxaYhSVPcvyokfs08X_6gu-Qe4QZsf_3TDMY4qxFuLwtBUW5go5Ynn4_fJA1qI7aKz-kUy636gUb73_Kn4nI-2-c1k5Xe-MTbKazLeQDX7IgFJvsLANbmOh4SJCueyBacUxgx8SL7oi90ffF61ESmzeaYuHf8jxeZyX9NjNGGN3LRPNQBR1E9bhecrCVT6ZxR8GBfvGKBTnHybwkYPywW9AwmG3UwsV-LoXCLKmvj0eUqvREfUZo4Aw2-mUvz6W9NzUmDXPq_4G7XM64EQVaF7iuSja1-gLgesOJHR6wQdxP3bFm-9d3yn83xXLGAwwygztwDUHBeeg24mMsTaG_uBmxraeeZOLtXBPMrNp0SceNbqpLmVb_6T5PvOaIFmHsTFV2i0cSqA3KbzzvFbdKNdDpASUA20byiwHkwpVmVuFB90qMT_PCvsc-P0gHm2EaMquDQbywGzd4-YseBZ0IX342UCapxmlZnzkASm8hhU05oLI3_yQhjR6jFt-9naj9xwbLPpx2T3q8TgrPKuDHlmhKEuZVNTAfGEiqf2KW3bsZSl=w1616-h1080-no"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 							<!-- LAYERS -->
 
 							<!-- LAYER NR. 1 -->
