added contact and about page

--- a/home-gallery.html
+++ b/home-gallery.html
@@ -72,7 +72,7 @@
 													<li><a href="home-vertikal.html">Vertical menu</a></li>
 													<li><a href="home-highlight.html">Highlight</a></li>
 												</ul>
-											</div>	
+											</div>
 										</div>
 									</div>
 								</div>
@@ -143,7 +143,7 @@
 														</ul>
 													</div>
 												</div>
-											</div>	
+											</div>
 										</div>
 									</div>
 								</div>
@@ -258,7 +258,7 @@
 							<!-- SLIDE  -->
 							<li data-index="rs-149" data-transition="slideoverhorizontal" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="" data-thumb="upload/slide/thumb1.jpg">
 								<!-- MAIN IMAGE -->
-								<img src="upload/slide/g1.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+								<img src="https://lh3.googleusercontent.com/DtBdPFxF6xzweHE_N-ZZHjaDPgsHdjtqn_aUOpvl9XaVqSHQsynmjIgQ3IUpHkLbM7JQtXfI4Dod-fsoBCb49RqjCIgfpJPrH0c6KfqaCS9xyXG8KXUg0H6IwzdXCMaCpVaDuE4Fu-P7MQ95qm148AxCxoRTF0BV0WGwl3mw4HRhWFB-N2J-BbBAH6bEWg-jQlnlsSyWcngJTjmKzexQVgSPeDUHDaZQ9punIVi5w0M5uTbrEu98uTRkkEcviXcd_ocVT59AMwvVpb3z5sec-Qm7SDOYrZoN_LLW_m2vEZc9QOiiX_M4ot8A6kxn0VhAOwCo_CWR_ZjqPS41dAj7VRdicHy7Jz_TAHjhibWXAdY5kPzc2nHTKk3emB8icfnOIpFV9F5WrBWb61Go5pGblPInnX3sP-6yEdkBwk5lV4QrjtD593lqYsmxLCg9jv04pr5WPLRu90CbhCfIzWGE5FvAJDoYzNMUfKOa4pYlXRAC-wOEt9jqS3kHbHOnZiYBeIYEFr3p4mFkFys9u_qrnckpOQmvTQJovDzhP-1iIYIhEeJUCV1W_yun-ploFtMk3UVNG6AvX_OMduMUTVctJuvx15EnKcG2c2ZA6XLwI5uhjhNy=w1911-h1274-no"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 								<!-- LAYERS -->
 
 								<!-- LAYER NR. 1 -->
@@ -282,7 +282,7 @@
 
 									data-elementdelay="0.05" 
 									
-									style="z-index: 5; white-space: nowrap;">Suspendisse mauris
+									style="z-index: 5; white-space: nowrap;">Alice Liu
 								</div>
 
 								<!-- LAYER NR. 2 -->
@@ -305,7 +305,7 @@
 									data-responsive_offset="on" 
 
 									
-									style="z-index: 6; white-space: nowrap;">Praesent elementum hendrerit tortor. Sed semper lorem at  
+									style="z-index: 6; white-space: nowrap;">Sony A6000
 								</div>
 
 								<!-- LAYER NR. 3 -->
