--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
-	<title>Photofolio</title>
+	<title>Ryan Huang Photography</title>
 
 	<meta charset="utf-8">
 
@@ -41,7 +41,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="index.html">Ryan's Photography</a>
+						<a class="navbar-brand" href="index.html">Ryan Huang Photography</a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<a href="#" class="open-menu">
@@ -50,14 +50,15 @@
 							<span></span>
 						</a>
 						<ul class="nav navbar-nav navbar-right">
-							<li class="drop-arrow"><a class="active" href="index.html">Home</a>
+							<li class="drop-arrow"><a class="active" href="index.html">Photography</a>
 								<div class="megadrop two-col">
 									<div class="inner-dropdown">
-										<h2>Home Pages</h2>
+										<!--<h2>Home Pages</h2>-->
 										<div class="row">
 											<div class="col-sm-6">
 												<ul class="drop-items">
 													<li><a href="index.html">Slideshow</a></li>
+													<!--<li><a href="about-me.html">About me</a></li>-->
 													<!--<li><a href="home-scroll.html">Carousel</a></li>-->
 													<!--<li><a href="home-carousel.html">Category</a></li>-->
 													<!--<li><a href="home-showcase.html">Showcase</a></li>-->
@@ -77,7 +78,48 @@
 									</div>
 								</div>
 							</li>
-							<!--<li class="drop-arrow"><a href="about.html">Work</a>-->
+							<li><a class="active" href="about-me.html">About Me</a>
+								<!--<div class="megadrop two-col">-->
+									<!--<div class="inner-dropdown">-->
+										<!--&lt;!&ndash;<h2>Home Pages</h2>&ndash;&gt;-->
+										<!--<div class="row">-->
+											<!--<div class="col-sm-6">-->
+												<!--<ul class="drop-items">-->
+													<!--<li><a href="about-me.html">Information</a></li>-->
+													<!--&lt;!&ndash;<li><a href="about-me.html">About me</a></li>&ndash;&gt;-->
+													<!--&lt;!&ndash;<li><a href="home-scroll.html">Carousel</a></li>&ndash;&gt;-->
+													<!--&lt;!&ndash;<li><a href="home-carousel.html">Category</a></li>&ndash;&gt;-->
+													<!--&lt;!&ndash;<li><a href="home-showcase.html">Showcase</a></li>&ndash;&gt;-->
+													<!--&lt;!&ndash;<li><a href="home-portfolio-masonry.html">Porfolio Masonry</a></li>&ndash;&gt;-->
+												<!--</ul>-->
+											<!--</div>-->
+											<!--<div class="col-sm-6">-->
+											<!--<ul class="drop-items">-->
+											<!--<li><a href="home-gallery.html">Gallery with thumbnails</a></li>-->
+											<!--<li><a href="home-portfolio-grid.html">Portfolio Grid</a></li>-->
+											<!--<li><a href="home-blog.html">Photoblog</a></li>-->
+											<!--<li><a href="home-vertikal.html">Vertical menu</a></li>-->
+											<!--<li><a href="home-highlight.html">Highlight</a></li>-->
+											<!--</ul>-->
+											<!--</div>	-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+							</li>
+							<li><a class="active" href="contact.html">Contact Me</a>
+								<!--<div class="megadrop two-col">-->
+									<!--<div class="inner-dropdown">-->
+										<!--<div class="row">-->
+											<!--<div class="col-sm-6">-->
+												<!--<ul class="drop-items">-->
+													<!--<li><a href="about-me.html">Information</a></li>-->
+												<!--</ul>-->
+											<!--</div>-->
+										<!--</div>-->
+									<!--</div>-->
+								<!--</div>-->
+							</li>
+							<!--<li class="drop-arrow"><a href="about-me.html">About Me</a>-->
 								<!--<div class="megadrop five-col">-->
 									<!--<div class="inner-dropdown">-->
 										<!--<div class="row">-->
@@ -86,12 +128,13 @@
 													<!--<div class="col-sm-4">-->
 														<!--<h2>Modern</h2>-->
 														<!--<ul class="drop-items">-->
-															<!--<li><a href="portfolio-fullscreen.html">Slideshow</a></li>-->
-															<!--<li><a href="portfolio-float.html">Float</a></li>-->
-															<!--<li><a href="portfolio-split.html">Split</a></li>-->
-															<!--<li><a href="portfolio-scroll.html">Carousel</a></li>-->
-															<!--<li><a href="portfolio-gallery.html">Gallery with thumbnails</a></li>-->
-															<!--<li><a href="portfolio-slider.html">Slider</a></li>-->
+															<!--<li><a href=about-me.html">Information</a></li>-->
+															<!--&lt;!&ndash;<li><a href="portfolio-fullscreen.html">Slideshow</a></li>&ndash;&gt;-->
+															<!--&lt;!&ndash;<li><a href="portfolio-float.html">Float</a></li>&ndash;&gt;-->
+															<!--&lt;!&ndash;<li><a href="portfolio-split.html">Split</a></li>&ndash;&gt;-->
+															<!--&lt;!&ndash;<li><a href="portfolio-scroll.html">Carousel</a></li>&ndash;&gt;-->
+															<!--&lt;!&ndash;<li><a href="portfolio-gallery.html">Gallery with thumbnails</a></li>&ndash;&gt;-->
+															<!--&lt;!&ndash;<li><a href="portfolio-slider.html">Slider</a></li>&ndash;&gt;-->
 														<!--</ul>-->
 													<!--</div>-->
 													<!--<div class="col-sm-4">-->
@@ -148,7 +191,7 @@
 									<!--</div>-->
 								<!--</div>-->
 
-							<!--</li>-->
+							</li>
 							<!--<li class="drop-arrow"><a href="services.html">Pages</a>-->
 								<!--<div class="megadrop four-col">-->
 									<!--<div class="inner-dropdown">-->
@@ -490,9 +533,9 @@
 		<footer>
 			<div class="container-fluid">
 				<div class="row">
-					<!--<div class="col-md-6">-->
-						<!--<p>Copyright © 2015 by Upifix. Made with Love.</p>-->
-					<!--</div>-->
+					<div class="col-md-6">
+						<p>Ryan Huang</p>
+					</div>
 					<div class="col-md-6">
 						<ul class="social-icons">
 							<li><a href="https://www.facebook.com/ryanofnba">Facebook</a></li>
